--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,30 +22,34 @@
             android:name=".CreateAccountActivity"
             android:exported="false" />
         <activity
-            android:name=".BanGiaActivity"
-            android:exported="false" />
+            android:name=".activity.BanGiaActivitytivity"
+            android:exported="true" />
         <activity
             android:name=".TaiKhoan"
             android:exported="false" />
         <activity
-            android:name=".DatlichActivity"
-            android:exported="false" />
+            android:name=".activity.DatlichActivity"
+            android:exported="true" />
         <activity
             android:name=".AccoutActivity"
             android:exported="false" />
+        <activity android:name=".activity.BanGiaActivity"
+            android:exported="true"/>
+        <activity android:name=".activity.LichSuCutActivity"
+            android:exported="true"/>
         <activity
             android:name=".activity.ChonDichVuAcitivty"
             android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
