--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ungdungdatlichcattoc">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
 
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UngDungDatLichCatToc"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".XacthucSDT"
@@ -33,23 +34,37 @@
         <activity
             android:name=".AccoutActivity"
             android:exported="false" />
-        <activity android:name=".activity.BanGiaActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.LichSuCutActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".activity.BanGiaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.LichSuCutActivity"
+            android:exported="true" />
         <activity
             android:name=".activity.ChonDichVuAcitivty"
-            android:exported="true" >
+            android:exported="true">
 
         </activity>
+
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.LoginActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
