--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ungdungdatlichcattoc">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <application
 
-        android:usesCleartextTraffic="true"
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +14,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UngDungDatLichCatToc"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ChitietNewfeedActivity"
+            android:exported="false"
+            android:label="@string/title_activity_chitiet_newfeed"
+            android:theme="@style/Theme.UngDungDatLichCatToc.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ActivityDangki"
             android:exported="false">
@@ -47,20 +57,18 @@
         <activity
             android:name=".AccoutActivity"
             android:exported="false" />
-        <activity android:name=".activity.BanGiaActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.LichSuCutActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".activity.BanGiaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.LichSuCutActivity"
+            android:exported="true" />
         <activity
             android:name=".activity.ChonDichVuAcitivty"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activity.Activity_newfeed"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
