--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ungdungdatlichcattoc">
-<uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <application
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,6 +17,7 @@
         android:theme="@style/Theme.UngDungDatLichCatToc"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
             android:name=".XacthucSDT"
             android:exported="false" />
@@ -42,40 +44,25 @@
             android:exported="true" />
         <activity
             android:name=".activity.ChonDichVuAcitivty"
-            android:exported="true">
-
-        </activity>
-
-        <activity
-            android:name=".activity.LoginActivity"
-            android:exported="true">
-
-
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".activity.RegisterActivity"
             android:exported="true" />
         <activity
+            android:name=".activity.Activity_newfeed"
+            android:exported="true" />
+        <activity
             android:name=".activity.LoginActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-        <activity
-            android:name=".activity.RegisterActivity"
-            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
