--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,13 @@
         android:theme="@style/Theme.UngDungDatLichCatToc"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ActivityDetail"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".XacthucSDT"
             android:exported="false" />
@@ -44,7 +50,7 @@
             android:exported="true" />
         <activity
             android:name=".activity.ChonDichVuAcitivty"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity.RegisterActivity"
             android:exported="true" />
@@ -62,7 +68,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
