--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     //
     // dependency sor slider view
 
-    implementation "com.github.smarteist:autoimageslider:1.3.9"
+  //  implementation 'com.github.smarteist:autoimageslider:1.4.0'
 
 // dependency for loading image from url
 
