--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,18 @@ dependencies {
     // dependency sor slider view
 
   //  implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    //mplementation 'com.github.smarteist:autoimageslider:1.4.0'
+
 
 // dependency for loading image from url
 
-    implementation "com.github.bumptech.glide:glide:4.11.0"
+//    implementation "com.github.bumptech.glide:glide:4.11.0"
+//    // dependency sor slider view
+//
+//    implementation "com.github.smarteist:autoimageslider:1.3.9"
+//
+//// dependency for loading image from url
+//
+//    implementation "com.github.bumptech.glide:glide:4.11.0"
 
 }
