--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,24 +44,7 @@ dependencies {
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation platform('com.google.firebase:firebase-bom:31.1.0')
-    implementation 'com.google.firebase:firebase-messaging'
-    //
-    // dependency sor slider view
 
-  //  implementation 'com.github.smarteist:autoimageslider:1.4.0'
-    //mplementation 'com.github.smarteist:autoimageslider:1.4.0'
-
-
-// dependency for loading image from url
-
-//    implementation "com.github.bumptech.glide:glide:4.11.0"
-//    // dependency sor slider view
-//
-//    implementation "com.github.smarteist:autoimageslider:1.3.9"
-//
-//// dependency for loading image from url
-//
-//    implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "com.github.bumptech.glide:glide:4.11.0"
 
 }
