--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,25 @@
         android:theme="@style/Theme.UngDungDatLichCatToc"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.DoiMatKhauQuenMatKhauActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.XacThucSdtQuenMatKhauActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.QuenMatKhauActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.RepassActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.RegiterPassworkActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.RegiterPhoneActivity"
+            android:exported="true" />
+
         <service
             android:name=".fcm.MyFirebaseMessagingService"
             android:enabled="true"
@@ -26,6 +45,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <activity
             android:name=".Activity_DichVuChiTiet"
             android:exported="false">
@@ -34,7 +54,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ThongtTinHoTroKhActivity"
+            android:name=".activity.ThongtTinHoTroKhActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
