--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,14 +55,16 @@
         </activity>
         <activity
             android:name=".activity.ThongtTinHoTroKhActivity"
-            android:exported="false">
+            android:exported="false"
+            >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".activity.UpdateAccountActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".ActivityDetail"
             android:exported="false">
@@ -72,7 +74,8 @@
         </activity>
         <activity
             android:name=".activity.XacthucSDT"
-            android:exported="false" />
+            android:exported="false"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".CreateAccountActivity"
             android:exported="false" />
@@ -92,13 +95,16 @@
         </activity>
         <activity
             android:name=".activity.DatlichActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".activity.AccoutActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".activity.BanGiaActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".activity.LichSuCutActivity"
             android:exported="true" />
@@ -107,16 +113,20 @@
             android:exported="true" />
         <activity
             android:name=".activity.RegisterActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".activity.Activity_newfeed"
-            android:exported="true" />
+            android:exported="true"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".activity.ActivityDetail"
-            android:exported="true" />
+            android:exported="true"
+            android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:autoRemoveFromRecents="true">
 
         </activity>
         <activity
