--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -26,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 
 }
 
@@ -35,6 +39,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -48,22 +53,4 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'me.relex:circleindicator:2.1.6'
-    //
-    // dependency sor slider view
-
-    //  implementation 'com.github.smarteist:autoimageslider:1.4.0'
-    //mplementation 'com.github.smarteist:autoimageslider:1.4.0'
-
-    implementation 'me.relex:circleindicator:2.1.6'
-// dependency for loading image from url
-
-//    implementation "com.github.bumptech.glide:glide:4.11.0"
-//    // dependency sor slider view
-//
-//    implementation "com.github.smarteist:autoimageslider:1.3.9"
-//
-//// dependency for loading image from url
-//
-//    implementation "com.github.bumptech.glide:glide:4.11.0"
-
 }
