--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".MyAppliation"
         android:allowBackup="true"
@@ -18,6 +19,30 @@
         android:theme="@style/Theme.UngDungDatLichCatToc"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
+
+        <activity
+            android:name=".activity.Activity_map"
+            android:exported="false"
+            android:label="@string/title_activity_map" />
+<!--        <activity-->
+<!--            android:name=".MapsActivity"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_maps" />-->
         <activity
             android:name=".activity.DoiMatKhauQuenMatKhauActivity"
             android:exported="false" />
@@ -55,8 +80,8 @@
         </activity>
         <activity
             android:name=".activity.UpdateAccountActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".ActivityDetail"
             android:exported="false">
@@ -66,8 +91,8 @@
         </activity>
         <activity
             android:name=".activity.XacthucSDT"
-            android:exported="false"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="false" />
         <activity
             android:name=".CreateAccountActivity"
             android:exported="false" />
@@ -77,7 +102,8 @@
         <activity
             android:name=".TaiKhoan"
             android:exported="false" />
-        <activity android:name=".activity.SplashActivity"
+        <activity
+            android:name=".activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -87,16 +113,16 @@
         </activity>
         <activity
             android:name=".activity.DatlichActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.AccoutActivity"
-            android:exported="false"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="false" />
         <activity
             android:name=".activity.BanGiaActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.LichSuCutActivity"
             android:exported="true" />
@@ -105,8 +131,8 @@
             android:exported="true" />
         <activity
             android:name=".activity.RegisterActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.Activity_newfeed"
             android:exported="true" />
@@ -118,14 +144,12 @@
             android:exported="true" />
         <activity
             android:name=".activity.ActivityDetail"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true">
-
-        </activity>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
