--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity
             android:name=".activity.UpdateAccountActivity"
             android:exported="true"
+            android:parentActivityName=".MainActivity"
             android:autoRemoveFromRecents="true"/>
         <activity
             android:name=".ActivityDetail"
