--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".MyAppliation"
         android:allowBackup="true"
@@ -18,6 +19,9 @@
         android:theme="@style/Theme.UngDungDatLichCatToc"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".MapGGActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.DoiMatKhauQuenMatKhauActivity"
             android:exported="false" />
@@ -55,9 +59,9 @@
         </activity>
         <activity
             android:name=".activity.UpdateAccountActivity"
+            android:autoRemoveFromRecents="true"
             android:exported="true"
-            android:parentActivityName=".MainActivity"
-            android:autoRemoveFromRecents="true"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ActivityDetail"
             android:exported="false">
@@ -67,8 +71,8 @@
         </activity>
         <activity
             android:name=".activity.XacthucSDT"
-            android:exported="false"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="false" />
         <activity
             android:name=".CreateAccountActivity"
             android:exported="false" />
@@ -78,7 +82,8 @@
         <activity
             android:name=".TaiKhoan"
             android:exported="false" />
-        <activity android:name=".activity.SplashActivity"
+        <activity
+            android:name=".activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -88,16 +93,16 @@
         </activity>
         <activity
             android:name=".activity.DatlichActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.AccoutActivity"
-            android:exported="false"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="false" />
         <activity
             android:name=".activity.BangGiaActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.LichSuCutActivity"
             android:exported="true" />
@@ -106,8 +111,8 @@
             android:exported="true" />
         <activity
             android:name=".activity.RegisterActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.Activity_newfeed"
             android:exported="true" />
@@ -122,14 +127,12 @@
             android:exported="true" />
         <activity
             android:name=".activity.ActivityDetail"
-            android:exported="true"
-            android:autoRemoveFromRecents="true"/>
+            android:autoRemoveFromRecents="true"
+            android:exported="true" />
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="true"
-            android:autoRemoveFromRecents="true">
-
-        </activity>
+            android:autoRemoveFromRecents="true"
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
